# ScreenCapture

./: CImage.cpp  CImage.h  CMakeLists.txt  Dpi.h  ImageFactory.cpp  ImageFactory.h  README.md  main.cpp  prog.cpp
src/: CImage.cpp  CImage.h  ImageBitmapInfo.h  ImageFactory.h  UIRect.cpp  UIRect.h
src/linux/: WindowBitmap.cpp  WindowBitmap.h  main.cpp
src/linux/UIDlg/: DirectoryIconTheme.cpp  DirectoryIconTheme.h  DisplayInstance.h  FileDialog.cpp  FileDialog.h  FileIconTheme.cpp  FileIconTheme.h  IconPixmap.cpp  IconPixmap.h  IconTheme.cpp  IconTheme.h  MainWindow.cpp  MainWindow.h  Misc.cpp  Misc.h  PathChangeNotify.h  PixmapCache.cpp  PixmapCache.h  UIControl.cpp  UIControl.h  UIEdit.cpp  UIEdit.h  UIFileListControl.cpp  UIFileListControl.h  UIPathButton.cpp  UIPathButton.h  UserDirs.cpp  UserDirs.h  X11Window.h  XBaseWindow.cpp  XBaseWindow.h  inicpp.h
src/win/: CharsetConvert.cpp  CharsetConvert.h  Dpi.cpp  WindowBitmap.cpp  WindowBitmap.h  main.cpp
win/: CImage.cpp  CImage.h  main.cpp
